performing unit tests for services, repositories and mappers